Improved metadata and Peikoff's photo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Peikoffian.com - Coming Soon</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💲</text></svg>">
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <!-- GSAP 2.x for TweenMax/TimelineMax compatibility -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>
+  <meta name="description" content="Peikoffian.com: Learn about Leonard Peikoff, study Objectivism, and explore quizzes and biography content dedicated to Peikoff and Ayn Rand's philosophy.">
+  <meta name="keywords" content="Leonard Peikoff, Peikoffian, learn objectivism, study Objectivism, peikoff rand, Ayn Rand, Objectivism, philosophy, biography, quiz">
+  <meta name="author" content="Jason Rand">
 </head>
 <body>
   <div class="canvas">
