Added plug for newest book.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <div class="coming-soon">
       <p>coming soon</p>
     </div>
+    <img id="peikoff-img" src="pics/peikoff.jpg" alt="Leonard Peikoff" class="peikoff-img">
+    <div class="peikoff-book-promo">
+      Check out Leonard Peikoff's newest book, "Can You Really Love a Dog?" in all major bookstores
+    </div>
   </div>
   <div id="fps"></div>
   <div id="footer">
