Maybe fixed responsiveness? Added DIM Hypo link.

--- a/index.html
+++ b/index.html
@@ -19,26 +19,22 @@
   <div class="canvas">
     <div class="streak"></div>
     <div class="cosmic-container">
-      <div class="p-fallback">P</div>
-      <div class="e-fallback">E</div>
-      <div class="i-fallback">I</div>
-      <div class="k-fallback">K</div>
-      <div class="o-fallback">O</div>
-      <div class="f-fallback">F</div>
-      <div class="f2-fallback">F</div>
-      <div class="i2-fallback">I</div>
-      <div class="a-fallback">A</div>
-      <div class="n-fallback">N</div>
+      <div class="p-fallback peikoff-purple">P</div>
+      <div class="e-fallback peikoff-purple-2">E</div>
+      <div class="i-fallback peikoff-purple-3">I</div>
+      <div class="k-fallback peikoff-purple-4">K</div>
+      <div class="o-fallback peikoff-purple-3">O</div>
+      <div class="f-fallback peikoff-purple-2">F</div>
+      <div class="f2-fallback peikoff-purple">F</div>
+      <div class="i2-fallback peikoff-green">I</div>
+      <div class="a-fallback peikoff-green-2">A</div>
+      <div class="n-fallback peikoff-green-3">N</div>
     </div>
     <div class="strawberry-container">
       <p>peikoffian.com</p>
     </div>
     <div class="coming-soon">
       <p>coming soon</p>
-    </div>
-    <img id="peikoff-img" src="pics/peikoff.jpg" alt="Leonard Peikoff" class="peikoff-img">
-    <div class="peikoff-book-promo">
-      Check out Leonard Peikoff's newest book, "Can You Really Love a Dog?" in all major bookstores
     </div>
   </div>
   <div id="fps"></div>
